--- a/style.css
+++ b/style.css
@@ -297,3 +297,62 @@ nav ul li a:hover::after {
 .contact-left p{
     margin-top: 30px;
 }
+.contact-left p i{
+    color: #FFD700;
+    margin-right: 15px;
+    font-size: 25px;
+}
+.social-icons{
+    margin: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    transition: transform(0.5s) ;
+    display: inline-block;
+    color: #ababab;
+}
+.social-icons a:hover{
+    color: #FFD700;
+    transform: translateY(-5px);
+}
+.btn.btn2{
+    display: inline-block;
+    background: #FFD700;
+}
+.contact-right form{
+    width: 100%;
+}
+form input, form textarea{
+    width:100%;
+    border: 0;
+    outline:none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #FFF;
+    font-size: 18px;
+    border-radius: 6px;
+}
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+/**********Mobile CSS*************/
+@media only screen and (max-width: 600px){
+    #header{
+        background-image: url(images/axlBackmobile.jpg);
+    }
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    
+    .header-text h1 {
+        font-size: 30px;
+    }
+
+}
