--- a/style.css
+++ b/style.css
@@ -88,14 +88,14 @@ nav ul li a:hover::after {
 }
 
 .row {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 10px;
+    
 }
 
 #axlBird {
-    width: 500px;
-    height: 500px;
+    position: relative;
 }
 
 .about-col-1 {
@@ -109,6 +109,7 @@ nav ul li a:hover::after {
 
 .about-col-2 {
     flex-basis: 60%;
+    word-wrap: break-word;
 }
 
 .subtitle {
@@ -120,11 +121,12 @@ nav ul li a:hover::after {
 /*about me  tab section*/
 .tab-titles {
     display: flex;
-    margin: 20px 40px;
+    justify-content: center;
+    align-items: center;
 }
 
 .tab-links {
-    margin: 50px;
+    margin: 5%;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
@@ -218,9 +220,6 @@ nav ul li a:hover::after {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
-}
-
-#wind {
 }
 
 .work {
@@ -357,5 +356,15 @@ form .btn2{
     .header-text h1 {
         font-size: 30px;
     }
+
+    .subtitle {
+        font-size: 30px;
+        font-weight: 600;
+        color: white;
+    }
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%; /* Make both columns take up 100% width */
+    }
+    
 
 }
