--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
 
 .container {
     padding: 10px 10%;
-    max-width: 100%; 
-    overflow-x: hidden; 
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 nav {
@@ -91,7 +91,7 @@ nav ul li a:hover::after {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 10px;
-    
+
 }
 
 #axlBird {
@@ -247,17 +247,19 @@ nav ul li a:hover::after {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction:column;
+    flex-direction: column;
     padding: 0 40px;
     text-align: center;
     font-size: 14px;
-    transition: height 0.5s ;
+    transition: height 0.5s;
 }
-.layer h3{
+
+.layer h3 {
     font-weight: 500;
     margin-bottom: 20px;
 }
-.layer a{
+
+.layer a {
     margin-top: 20px;
     color: #FFD700;
     text-decoration: none;
@@ -269,13 +271,16 @@ nav ul li a:hover::after {
     border-radius: 50%;
     text-align: center;
 }
-.work:hover img{
+
+.work:hover img {
     transform: scale(1.1);
 }
-.work:hover .layer{
+
+.work:hover .layer {
     height: 100%;
 }
-.btn{
+
+.btn {
     display: block;
     margin: 50px auto;
     width: fit-content;
@@ -286,50 +291,62 @@ nav ul li a:hover::after {
     color: #FFF;
     transition: background 0.5s;
 }
-.btn:hover{
+
+.btn:hover {
     background: #FFD700;
 }
+
 /*Contact*/
-.contact-left{
+.contact-left {
     flex-basis: 35%;
 }
-.contact-right{
+
+.contact-right {
     flex-basis: 60%;
 }
-.contact-left p{
+
+.contact-left p {
     margin-top: 30px;
 }
-.contact-left p i{
+
+.contact-left p i {
     color: #FFD700;
     margin-right: 15px;
     font-size: 25px;
 }
-.social-icons{
+
+.social-icons {
     margin: 30px;
 }
-.social-icons a{
+
+.social-icons a {
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    transition: transform(0.5s) ;
+    transition: transform(0.5s);
     display: inline-block;
     color: #ababab;
 }
-.social-icons a:hover{
+
+.social-icons a:hover {
     color: #FFD700;
     transform: translateY(-5px);
 }
-.btn.btn2{
+
+.btn.btn2 {
     display: inline-block;
     background: #FFD700;
 }
-.contact-right form{
+
+.contact-right form {
     width: 100%;
 }
-form input, form textarea{
-    width:100%;
+
+form input,
+form textarea {
+    width: 100%;
     border: 0;
-    outline:none;
+    outline: none;
     background: #262626;
     padding: 15px;
     margin: 15px 0;
@@ -337,22 +354,25 @@ form input, form textarea{
     font-size: 18px;
     border-radius: 6px;
 }
-form .btn2{
+
+form .btn2 {
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
 }
+
 /**********Mobile CSS*************/
-@media only screen and (max-width: 600px){
-    #header{
+@media only screen and (max-width: 636px) {
+    #header {
         background-image: url(images/axlBackmobile.jpg);
     }
+
     .header-text {
         margin-top: 100%;
         font-size: 16px;
     }
-    
+
     .header-text h1 {
         font-size: 30px;
     }
@@ -362,17 +382,23 @@ form .btn2{
         font-weight: 600;
         color: white;
     }
-    .about-col-1, .about-col-2 {
-        flex-basis: 100%; /* Make both columns take up 100% width */
+
+    .contact-left,
+    .contact-right {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 }
 
-@media only screen and (max-width: 1250px){
-    #header{
+/**********Tablet CSS*************/
+@media only screen and (max-width: 1250px) {
+    #header {
         background-image: url(images/axlBackmobile.jpg);
     }
-    
-    
+
     .header-text h1 {
         font-size: 30px;
     }
@@ -382,7 +408,12 @@ form .btn2{
         font-weight: 600;
         color: white;
     }
-    .about-col-1, .about-col-2 {
-        flex-basis: 100%; /* Make both columns take up 100% width */
+
+    .about-col-1,
+    .about-col-2 {
+        flex-basis: 100%;
+        /* Make both columns take up 100% width */
     }
+    
+
 }
