--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ form .btn2 {
 }
 
 /**********Tablet CSS*************/
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1600px) {
     #header {
         background-image: url(images/axlBackmobile.jpg);
     }
@@ -414,6 +414,9 @@ form .btn2 {
         flex-basis: 100%;
         /* Make both columns take up 100% width */
     }
-    
-
+}
+#msg{
+    color: #61b752;
+    display: block;
+    margin-top: -40px;
 }
