--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/axlBack.JPG);
+    background-image: url(images/axlBack.JPG);
     background-size: cover;
     background-position: center;
     overflow-x: hidden;
@@ -365,7 +365,7 @@ form .btn2 {
 /**********Mobile CSS*************/
 @media only screen and (max-width: 636px) {
     #header {
-        background-image: url(/images/axlBackmobile.jpg);
+        background-image: url(images/axlBackmobile.jpg);
     }
 
     .header-text {
@@ -396,7 +396,7 @@ form .btn2 {
 /**********Tablet CSS*************/
 @media only screen and (max-width: 1600px) {
     #header {
-        background-image: url(/images/axlBackmobile.jpg);
+        background-image: url(images/axlBackmobile.jpg);
     }
 
     .header-text h1 {
