--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
     background-position: center;
     overflow-x: hidden;
 }
+#headerNoBkg {
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    overflow-x: hidden;
+}
 
 .container {
     padding: 10px 10%;
