--- a/Styles/Projects.css
+++ b/Styles/Projects.css
@@ -5,11 +5,13 @@
     box-sizing: border-box;
 }
 body {
-    background-color: black;
+    background: linear-gradient(45deg, #d2001a, #7462ff, #f48e21, #23d5ab);
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    margin: 0rem;   
+    margin: 0rem;
+    background-size: 300% 300%;
+    animation: colorGrad 12s ease-in-out infinite;
 }
 /* Projects Track */
 #image-track > .image{
@@ -27,4 +29,49 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(0% , -50%);
+}
+
+/*Background Effect*/
+#bubbles{
+    position: relative;
+    display: flex;
+}
+#bubbles span{
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background: #4fc3dc;
+    margin: 0 4px;
+    border-radius: 50% ;
+    box-shadow: 0 0 0 10px #4fc3dc44;
+    animation: bubbleAnimation 15s linear infinite;
+}
+#bubbles span:nth-child(even){
+    background: #ff2d75;
+    box-shadow: 0 0 0 10px #ff2d7544;
+}
+@keyframes colorGrad {
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
+
+@keyframes bubbleAnimation {
+    0%{
+        transform: translateY(100vh) scale(0);
+    }
+    90%{
+        transform: translateY(2.5vh) scale(1);
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(2.5vh) scale(1);
+        opacity: 0;
+    }
 }
