--- a/Styles/Header.css
+++ b/Styles/Header.css
@@ -1,23 +1,32 @@
 /* header Menu items*/
-.container {
-    padding: 10px 10%;
+.menuContainer {
     max-width: 100vw;
     user-select: none;
     background: black;
+    border-radius: 10px;
+    margin-inline: 30px;
+    position: sticky;
+}
+.menuMob{
+    display: none;
+    font-size: 30px;
+
+    align-items: center;
 }
 .logo {
-    width: 140px;
-    height: 100px;
-   user-select: none;
+    width: 150px;
+    height: 75px;
+    user-select: none;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-nav ul{
-    display:flex;
+nav ul {
+    display: flex;
     align-items: center;
     justify-content: center;
 
@@ -28,7 +37,7 @@ nav ul li {
     list-style: none;
     margin: 10px 5px;
     user-select: none;
-    
+
 }
 
 nav ul li a {
@@ -55,11 +64,33 @@ nav ul li a:hover::after {
     width: 100%;
     color: white;
 }
+
 nav ul li a:hover {
     color: white;
     text-shadow: 0 0 5px #fff,
-    0 0 15px #fff,
-    0 0 30px #fff,
-    0 0 60px #fff,
-    0 0 100px #fff;
+        0 0 15px #fff,
+        0 0 30px #fff,
+        0 0 60px #fff,
+        0 0 100px #fff;
+}
+
+.resumeDown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #555;
+    text-decoration: none;
+}
+
+.resumeDown:hover {
+    color: #FFD700;
+}
+
+@media (max-width: 1160px) {
+    nav ul{
+        display: none;
+    }
+    .menuMob{
+        display: flex;
+    }
 }
