--- a/Styles/Projects.css
+++ b/Styles/Projects.css
@@ -35,6 +35,7 @@ body {
 #bubbles{
     position: relative;
     display: flex;
+    z-index: -100;
 }
 #bubbles span{
     position: relative;
@@ -43,12 +44,13 @@ body {
     background: #4fc3dc;
     margin: 0 4px;
     border-radius: 50% ;
-    box-shadow: 0 0 0 10px #4fc3dc44;
+    box-shadow: 0 0 0 5px #4fc3dc44;
     animation: bubbleAnimation 15s linear infinite;
+    z-index: -100;
 }
 #bubbles span:nth-child(even){
     background: #ff2d75;
-    box-shadow: 0 0 0 10px #ff2d7544;
+    box-shadow: 0 0 0 5px #ff2d7544;
 }
 @keyframes colorGrad {
     0%{
@@ -67,11 +69,11 @@ body {
         transform: translateY(100vh) scale(0);
     }
     90%{
-        transform: translateY(2.5vh) scale(1);
+        transform: translateY(-20vh) scale(1);
         opacity: 1;
     }
     100%{
-        transform: translateY(2.5vh) scale(1);
+        transform: translateY(-20vh) scale(1);
         opacity: 0;
     }
 }
