--- a/Styles/Header.css
+++ b/Styles/Header.css
@@ -1,16 +1,25 @@
 /* header Menu items*/
 .menuContainer {
-    max-width: 100vw;
+    width: 100vw;
     user-select: none;
     background: black;
     border-radius: 10px;
-    position: sticky;
+    position: fixed;
+    z-index: 1000;
+    animation: showMenu .7s ease-in both;
+}
+.menuContainer.hide {
+    animation: hideMenu .7s ease-out both;
 }
 .menuMob{
     display: none;
     font-size: 30px;
     align-items: center;
     margin-inline: 29.11px;
+    color: #555;
+}
+.menuMob:hover{
+    color: #FFD700;
 }
 .logo {
     width: 150px;
@@ -22,14 +31,17 @@ nav {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-inline: 20px;
+    margin-inline: 50px;
 }
 
 nav ul {
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
+ul{
+    padding: 0;
 }
 
 nav ul li {
@@ -86,11 +98,40 @@ nav ul li a:hover {
     color: #FFD700;
 }
 
-@media (max-width: 1160px) {
+@keyframes hideMenu {
+    0%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 0%;
+    }
+}
+@keyframes showMenu {
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+
+@media only screen and (max-width: 430px) {
+    .menuMob{
+        display: flex;
+    }
     nav ul{
         display: none;
     }
+    .resumeDown{
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 431px)and (max-width: 930px) {
     .menuMob{
         display: flex;
+    }
+    nav ul{
+        display: none;
     }
 }
