--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: black;
     color: #fff;
     overflow-x: hidden;
+    margin: 0;
 }
 
 #header {
@@ -153,13 +154,13 @@ body {
 
 .img-cont{
     height: 533px;
-    background-size: cover;
+    object-fit: cover;
     background-position: center center;
 }
 
 .img-cont img {
-    width: 100%;
-    height: 100%;
+    
+    object-fit: cover;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
