--- a/Styles/Header.css
+++ b/Styles/Header.css
@@ -7,20 +7,13 @@
     position: fixed;
     z-index: 1000;
     animation: showMenu .7s ease-in both;
+
 }
+
 .menuContainer.hide {
     animation: hideMenu .7s ease-out both;
 }
-.menuMob{
-    display: none;
-    font-size: 30px;
-    align-items: center;
-    margin-inline: 29.11px;
-    color: #555;
-}
-.menuMob:hover{
-    color: #FFD700;
-}
+
 .logo {
     width: 150px;
     height: 75px;
@@ -40,7 +33,7 @@ nav ul {
     justify-content: center;
 }
 
-ul{
+ul {
     padding: 0;
 }
 
@@ -49,7 +42,6 @@ nav ul li {
     list-style: none;
     margin: 10px 5px;
     user-select: none;
-
 }
 
 nav ul li a {
@@ -98,40 +90,108 @@ nav ul li a:hover {
     color: #FFD700;
 }
 
+/*Mobile menu*/
+.menuMob {
+    display: none;
+    font-size: 30px;
+    align-items: center;
+    margin-inline: 29.11px;
+    color: #555;
+
+}
+
+.menuMob:hover {
+    color: #FFD700;
+}
+
+.mobMenuCont {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.9);
+    /* Semi-transparent black background */
+    position: fixed;
+    top: 0;
+    /* right: 100%; Initially hidden off-screen */
+    transition: right 0.3s ease-in-out;
+    /* Add a transition effect */
+    z-index: 999;
+    /* Higher than the main menu */
+    justify-content: center;
+    align-items: center;
+    right: -110%
+}
+
+.mobMenuCont ul li {
+    list-style: none;
+    margin: 10px 5px;
+    text-align: center;
+}
+
+.mobMenuCont ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+.resumeDownMob {
+    display: none;
+}
+
+/*Animations*/
 @keyframes hideMenu {
-    0%{
+    0% {
         opacity: 100%;
     }
-    100%{
+
+    100% {
         opacity: 0%;
     }
 }
+
 @keyframes showMenu {
-    0%{
+    0% {
         opacity: 0%;
     }
-    100%{
+
+    100% {
         opacity: 100%;
     }
 }
 
+/*Size dependant changes*/
 @media only screen and (max-width: 430px) {
-    .menuMob{
+    .menuMob {
         display: flex;
     }
-    nav ul{
+
+    nav ul {
         display: none;
     }
-    .resumeDown{
+
+    .resumeDown {
         display: none;
+    }
+
+    .resumeDownMob {
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #555;
+        text-decoration: none;
+    }
+    .resumeDownMob:hover {
+        color: #FFD700;
     }
 }
 
 @media only screen and (min-width: 431px)and (max-width: 930px) {
-    .menuMob{
+    .menuMob {
         display: flex;
     }
-    nav ul{
+
+    nav ul {
         display: none;
     }
 }
