--- a/style.css
+++ b/style.css
@@ -37,12 +37,20 @@ body {
 /*Main Text*/
 .header-text {
     margin-top: 20%;
+    margin-left: 10%;
     font-size: 30px;
+    animation: slideIn 1s ease-in both;
+}
+.header-text p{ 
+    animation: bounce 1s ease-in-out 1.2s infinite;
+    animation-delay: 3s;
 }
 
 .header-text h1 {
     font-size: 60px;
     margin-top: 20px;
+    opacity: 0;
+    animation: fadeIn 1s ease-in 1s both;
 }
 
 .header-text  span {
@@ -299,6 +307,48 @@ form .btn2 {
     color: #61b752;
     display: block;
     margin-top: -40px;
+}
+
+@keyframes slideIn {
+    0%{
+        transform: translateX(-300px);
+    }
+    100%{
+        transform: translateX(-0px);
+    }
+}
+
+@keyframes bounce {
+    0% , 20%, 50% , 80% ,100% {
+        transform: translateY(0px);
+    }
+    40%{
+        transform: translateY(-30px);
+    }
+    60%{
+        transform: translateY(-15px);
+    }
+}
+
+@keyframes firstBounce {
+    0% , 20%, 50% , 80% ,100% {
+        transform: translateY(0px);
+    }
+    40%{
+        transform: translateY(-30px);
+    }
+    60%{
+        transform: translateY(-15px);
+    }
+}
+
+@keyframes fadeIn {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 100;
+    }
 }
 
 /**********Mobile CSS*************/
