--- a/Styles/Header.css
+++ b/Styles/Header.css
@@ -53,6 +53,17 @@ nav ul li a {
     text-transform: uppercase;
 }
 
+nav ul li a.active::after {
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: #FFD700;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
 nav ul li a::after {
     content: '';
     width: 0%;
@@ -122,20 +133,56 @@ nav ul li a:hover {
     align-items: center;
     right: -110%
 }
+.mobMenuCont ul{
+    margin: 0;
+}
 
 .mobMenuCont ul li {
     list-style: none;
-    margin: 10px 5px;
+    margin: 10px 10px;
     text-align: center;
 }
 
 .mobMenuCont ul li a {
     text-decoration: none;
     color: white;
+    font-size: 50px;
 }
 
 .resumeDownMob {
     display: none;
+}
+
+.mobMenuCont ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 50px;
+    border-bottom: 2px solid transparent; /* Initially transparent */
+}
+
+.mobMenuCont ul li a.active {
+    border-bottom-color: #FFD700; /* Color for the active link */
+}
+/*Background Effect*/
+#bubbles{
+    position: relative;
+    display: flex;
+    z-index: -100;
+}
+#bubbles span{
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background: #ae00ff;
+    margin: 0 4px;
+    border-radius: 50% ;
+    box-shadow: 0 0 0 5px #ae0044;
+    animation: bubbleAnimation 15s linear infinite;
+    z-index: -100;
+}
+#bubbles span:nth-child(even){
+    background: #00ff5e;
+    box-shadow: 0 0 0 5px #00ff5e44;
 }
 
 /*Animations*/
@@ -158,6 +205,20 @@ nav ul li a:hover {
     100% {
         opacity: 100%;
         display: block;
+    }
+}
+
+@keyframes bubbleAnimation {
+    0%{
+        transform: translateY(40vh) scale(0);
+    }
+    90%{
+        transform: translateY(-100vh) scale(1);
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-100vh) scale(1);
+        opacity: 0;
     }
 }
 
