--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color:white;
+    background-color:#4b2929;
     color: #fff;
     overflow-x: hidden;
     margin: 0;
@@ -33,6 +33,16 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
+}
+
+.Abtcontainer {
+    padding: 10px 5%;
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: #262626;
+    border-radius: 25px;
+    margin: 10px 10%;   
 }
 
 /*Main Text*/
@@ -81,6 +91,7 @@ body {
 
 .about-col-1 {
     flex-basis: 35%;
+    justify-content: center;
 }
 
 .about-col-1 img {
@@ -112,7 +123,12 @@ body {
 .services {
     padding: 30px 0px;
 }
-
+.servHeader{
+    display: flex;
+    color: #FFF;
+    justify-content: center;
+    text-align: center;
+}
 .services-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -154,80 +170,45 @@ body {
 }
 
 /*Portfolio*/
-.work-list {
+.projectContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
-}
-
-.work {
-    border-radius: 10px;
+    margin: 50px 10%;
+    align-items: center;
+    justify-items: center;
     position: relative;
     overflow: hidden;
 }
-
-.img-cont{
-    height: 533px;
-    object-fit: cover;
-    background-position: center center;
-}
-
-.img-cont img {
-    width: 555px;
-    height: 555px;
-    border-radius: 10px;
-    display: block;
-    transition: transform 0.5s;
-}
-
-.layer {
-    width: 100%;
-    height: 0%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #FFD700);
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
+.item {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
     text-align: center;
-    font-size: 14px;
-    transition: height 0.5s;
+    background-color: #262626;
+    padding: 20px;
+    border-radius: 5%;
+    align-items: center;
+} 
+.item.item2{
+    background-color: blueviolet;
 }
-
-.layer h3 {
-    font-weight: 500;
-    margin-bottom: 20px;
-}
-
-.layer a {
-    margin-top: 20px;
-    color: #FFD700;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 60px;
-    background: #FFF;
-    width: 60px;
-    height: 60px;
+#windT{
     border-radius: 50%;
-    text-align: center;
+    width: 200px;
+    height: 200px;
 }
-
-.work:hover img {
-    transform: scale(1.1);
-}
-
-.work:hover .layer {
-    height: 100%;
+.middleLine {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 1px;
+    background: #ccc;
 }
 
 .btn {
-    background-color: #000;
+    background-color: transparent;
     display: block;
     margin: 10px auto;
     width: fit-content;
@@ -236,17 +217,18 @@ body {
     border-radius: 6px;
     text-decoration: none;
     color: #FFF;
-    transition: background 0.5s;
+    transition: all 0.5s;
 }
-
 .btn:hover {
     background: #FFD700;
+    color: #262626;
 }
 
 /*Contact*/
 .contact-left {
     flex-basis: 35%;
     margin-bottom: 20px;
+    align-items: center;
 }
 
 .contact-right {
@@ -316,6 +298,20 @@ form .btn2 {
     color: #61b752;
     display: block;
     margin-top: -40px;
+}
+
+/* scroll animation */
+.hidden{
+    opacity: 0;
+    transition: all 3s;
+    filter: blur(5px);
+    transform: translateX(-100%);
+}
+
+.show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
 }
 
 @keyframes slideIn {
@@ -451,5 +447,11 @@ form .btn2 {
         font-size: 50px;
         font-weight: 600;
         color: white;
+    }
+}
+
+@media only screen and (min-width: 1630px) and (max-width: 2200px) {
+    .abtText {
+        font-size: 20px;
     }
 }
