--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #4b2929;
+    background-color: #000;
     color: #fff;
     overflow-x: hidden;
     margin: 0;
@@ -77,6 +77,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #4b2929;
 }
 
 .row {
@@ -126,6 +127,7 @@ body {
 /*Services*/
 .services {
     padding: 30px 0px;
+    background-color: #4b2929;
 }
 
 .servHeader {
@@ -188,7 +190,6 @@ body {
 }
 
 .proCont {
-    margin-top: 5%;
     padding-top: 5%;
     padding-bottom: 2%;
     background-image: url(images/bkg.jpg);
@@ -285,7 +286,8 @@ body {
 
 /*Contact*/
 .contact {
-    margin-bottom: 3%;
+    padding: 3% 0;
+    background-color: #4b2929;
 }
 
 .contact-left {
