im using apple inspect tools ill find it

--- a/style.css
+++ b/style.css
@@ -468,6 +468,9 @@ body {
         display: none;
     }
 
+    .proCont {
+        background-attachment: scroll;
+    }
 }
 
 /**********big phone CSS*************/
