--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     background-attachment: fixed;
-    background-position: center;
+    background-position-y: -500px;
 }
 
 #headerNoBkg {
