think the mobile browser does not like fixed bkg

--- a/style.css
+++ b/style.css
@@ -471,6 +471,9 @@ body {
     .proCont {
         background-attachment: scroll;
     }
+    #header {
+        background-attachment: scroll;
+    }
 }
 
 /**********big phone CSS*************/
