--- a/style.css
+++ b/style.css
@@ -82,9 +82,8 @@ body {
 
 .row {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
     grid-gap: 10px;
-    
     justify-items: center;
     align-items: center;
 }
@@ -112,7 +111,27 @@ body {
     flex-direction: column;
     justify-content: center;
 }
-
+.eduTittle{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.eduTittle h1{
+    margin: 10px 0;
+}
+.univEdu{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.CCEdu{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 .subtitle {
     font-size: 80px;
     font-weight: 600;
@@ -123,7 +142,49 @@ body {
 .abtText {
     font-size: 60px;
 }
-
+.education div p{
+    margin-left: 10px;
+}
+.deg{
+    font-size: 12px;
+    margin: 0;
+}
+/* skill section */
+.skills{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.skillTitle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #FFF;
+    position: relative;
+}
+.skillTitle::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 0px;
+    height: 4px;
+    background-color: #FFD700;
+    transition: .5s;
+}
+.skillBox:hover .imgCont{
+    transform: translateY(-10px);
+} 
+.skillBox:hover > .skillTitle::after{
+    width: 35px;
+}
+.img{
+    width: 100px;
+    height: 100px;
+    position: relative;
+}
 /*Services*/
 .services {
     padding: 30px 0px;
@@ -192,7 +253,7 @@ body {
 .proCont {
     padding-top: 5%;
     padding-bottom: 2%;
-    background-image: url(images/bkg.jpg);
+    background-color:#4b2929 ;
     background-size: cover;
     overflow: hidden ;
     background-attachment: fixed;
@@ -461,6 +522,9 @@ body {
     .projectContainer {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         overflow: hidden;
+    }
+    .row {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 
     .nothing {
