--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ body {
     background-color: #FFD700;
     transition: .5s;
 }
+.imgCont{
+    transition: all .5s;
+}
 .skillBox:hover .imgCont{
     transform: translateY(-10px);
 } 
@@ -253,7 +256,7 @@ body {
 .proCont {
     padding-top: 5%;
     padding-bottom: 2%;
-    background-color:#4b2929 ;
+    background-color:#294b4b ;
     background-size: cover;
     overflow: hidden ;
     background-attachment: fixed;
