--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ body {
     width: 100vw;
     height: 100vh;
     background-image: url(images/axlBack.JPG);
-    background-size: cover;
+    background-size: contain;
+    background-position:center center;
     overflow-x: hidden;
     overflow-y: hidden;
     background-attachment: fixed;
+    background-repeat: repeat-y;
 }
 
 #headerNoBkg {
