--- a/style.css
+++ b/style.css
@@ -82,9 +82,16 @@ body {
     background-color: #4b2929;
 }
 
+.Conrow {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-gap: 10px;
+    justify-items: center;
+    align-items: center;
+}
 .row {
     display: grid;
-    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
     grid-gap: 10px;
     justify-items: center;
     align-items: center;
