--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ body {
     bottom: 0;
     width: 0px;
     height: 4px;
-    background-color: #FFD700;
+    background-color: #ADD8E6;
     transition: .5s;
 }
 
@@ -321,7 +321,8 @@ body {
 }
 
 .item:hover {
-    background: #FFD700;
+    background: #ADD8E6;
+    color: #262626;
     transform: translateY(-10px);
 }
 
@@ -345,7 +346,7 @@ body {
     display: block;
     margin: 10px auto;
     width: fit-content;
-    border: 1px solid #FFD700;
+    border: 1px solid #ADD8E6;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -354,7 +355,7 @@ body {
 }
 
 .btn:hover {
-    background: #FFD700;
+    background: #ADD8E6;
     color: #262626;
 }
 
@@ -391,6 +392,12 @@ body {
 .proContain{
     text-decoration: none;
     color: #FFF;
+}
+
+#showcase{
+    width: 200px;
+    height: 400px;
+    border-radius: 5%;
 }
 /*Contact*/
 .contact {
